--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -27,7 +27,7 @@ body {
 main {
     padding: 1em;
     background-color: var(--accent1-color);
-    max-width: 100%;
+    max-width: 960px;
     
 }
 
