--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -203,7 +203,6 @@ h3 {
 .article{
     margin: 10px auto;
     position: relative;
-    border: 3px solid var(--primary-color);
     background-color: lightgrey;
 }
 
@@ -261,3 +260,33 @@ h3 {
     font-family: var(--paragraph-font);
     display: none;
     }
+
+    .contactmap{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr); 
+        grid-auto-rows: 100px;
+      }
+  
+      .social{
+        grid-column-start: 3;
+        grid-column-end:4;
+        grid-row-start:1;
+        grid-row-end: 2;
+        padding-top: 19px;
+    
+      }
+  
+      .contactinfo{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-column-end: 2;
+        padding-left: 60px;
+      }
+  
+      .prestonmap {
+        grid-column-start: 1;
+        grid-column-end:2;
+      }
+  
+  
