--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -263,30 +263,31 @@ h3 {
 
     .contactmap{
         display: grid;
-        grid-template-columns: repeat(4, 1fr); 
+        grid-template-columns: 1fr; 
         grid-auto-rows: 100px;
+        height: 
       }
   
       .social{
-        grid-column-start: 3;
-        grid-column-end:4;
+        grid-column-start: 1;
+        grid-column-end:2;
         grid-row-start:1;
         grid-row-end: 2;
-        padding-top: 19px;
     
       }
   
       .contactinfo{
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 1;
+        grid-column-start: 1;
         grid-column-end: 2;
-        padding-left: 60px;
+        grid-row-start: 2;
+        grid-row-end: 4;
+       
       }
   
       .prestonmap {
-        grid-column-start: 1;
-        grid-column-end:2;
+        display: none;
       }
+  
+  
   
   
