--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -89,6 +89,7 @@
     grid-row-start:1;
     grid-row-end: 2;
     padding-top: 19px;
+    display: block;
 
   }
 
@@ -98,6 +99,7 @@
     grid-row-start: 1;
     grid-column-end: 2;
     padding-left: 60px;
+    display: block;
   }
 
   .prestonmap {
@@ -106,6 +108,7 @@
     grid-row-start: 1;
     grid-row-end: 2;
     padding-left: 150px;
+    display: block;
   }
 
 }
