--- a/lesson7/lazyload.css
+++ b/lesson7/lazyload.css
@@ -1,5 +1,7 @@
 .main{
     display: grid;
     justify-items: center;
+    grid-template-columns: 300px;
+    grid-template-rows: repeat(1fr, 7);
 }
 
