--- a/lesson7/lazyload.css
+++ b/lesson7/lazyload.css
@@ -2,6 +2,6 @@
     display: grid;
     justify-items: center;
     grid-template-columns: 300px;
-    grid-template-rows: repeat(1fr, 7);
+    grid-gap: 10px;
 }
 
