--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -229,4 +229,8 @@ html, body{
           color: white;
         }
   
-  
+        .main {
+          display: grid;
+          justify-items: center;
+          grid-template-columns: 1fr;
+        }
