--- a/lesson7/css/medium.css
+++ b/lesson7/css/medium.css
@@ -76,4 +76,11 @@
     display: block;
   }
 
+  .main {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+  }
+
 }
