--- a/lesson7/css/medium.css
+++ b/lesson7/css/medium.css
@@ -76,8 +76,9 @@
     display: block;
   }
 
-  .main {
+  .container {
     display: grid;
+    justify-items: center;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
   }
