--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -37,7 +37,10 @@
         font-size: 20px;
     }
 
-    .main {
+    .container {
+        display: grid;
+        justify-items: center;
         grid-template-columns: 1fr 1fr 1fr;
-    }
+        grid-gap: 10px;
+      }
 }
