--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -251,4 +251,8 @@ html, body{
           box-shadow: 14px 14px 5px 1px gray;
         }
 
+        figcaption {
+          font-family: var(--paragraph-font);
+        }
+
         
