--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -43,4 +43,9 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 10px;
       }
+
+      .container img {
+        border-radius: 20px;
+        box-shadow: 14px 14px 5px 1px gray;
+      }
 }
