--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -48,4 +48,9 @@
         border-radius: 20px;
         box-shadow: 14px 14px 5px 1px gray;
       }
+
+      figcaption {
+        padding-top: 20px;
+        color: var(--primary-color)
+    }
 }
