--- a/lesson8/tablebuild.css
+++ b/lesson8/tablebuild.css
@@ -1,3 +1,5 @@
-table {
-    font-family: Ubunti, sans serif;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
+.table {
+    font-family: 'Ubuntu', sans-serif;
 }
