--- a/lesson8/tablebuild.css
+++ b/lesson8/tablebuild.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 
-.table {
+table {
     font-family: 'Ubuntu', sans-serif;
 }
