--- a/lesson8/tablebuild.css
+++ b/lesson8/tablebuild.css
@@ -16,3 +16,13 @@ table {
 .tablefooter {
     background-color: #7fb9c2;
 }
+
+.rowone {
+    background-color: #628ca6;
+    color: white;
+}
+
+.novthree {
+    background-color: #628ca6;
+    color: white;
+}
