--- a/lesson8/tablebuild.css
+++ b/lesson8/tablebuild.css
@@ -11,10 +11,12 @@ table {
 
 .tableheader {
     background-color: #7fb9c2;
+    font-size: 25px;
 }
 
 .tablefooter {
     background-color: #7fb9c2;
+    font-size: 12px;
 }
 
 .rowone {
