--- a/lesson8/tablebuild.css
+++ b/lesson8/tablebuild.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 table {
     font-family: 'Ubuntu', sans-serif;
