--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -32,3 +32,64 @@ main {
     
 }
 
+form fieldset {
+  margin: 2rem 0;
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+  padding: .5rem 2%;
+}
+
+form legend {
+  color: var(--primary-color);
+  margin: 0 1rem;
+  padding: 0 .5rem;
+}
+
+form label.top, form div {
+  display: block;
+  padding-top: 1 rem;
+  color: red;
+  font-size: .8rem;
+}
+
+form label.top input, form label.top select {
+  -webkit-appearance: none;
+  display: block;
+  font-size: 1rem;
+  border: solid 1px var(--primary-color);
+  border-radius: 4px;
+  padding: .75rem;
+  color: var(--secondary-color);
+  width: 100%;
+  max-width: 20rem;
+  background-color: rgba(0,0,0,0.1);
+
+}
+
+form label.sbs {
+   display: block;
+   padding: .75rem 0;
+   color: var(--primary-color);
+}
+
+form input.submitBtn {
+   border: none;
+   background-color: var(--secondary-color);
+   color: white;
+   border-radius: 1rem;
+   padding: .75rem 1.5rem; 
+   margin: 0 0 2rem 2%;
+   width: 96%;
+   max-width: 20rem;
+}
+
+form label.top input:required {
+  border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+   border-left: green solid 6px;
+}
+ 
+ 
+
