--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -32,6 +32,123 @@ main {
     
 }
 
+p {
+  font-family: var(--paragraph-font);
+  color: var(--secondary-color);
+}
+
+h1 {
+  font-family: var(--heading-font);
+  color: var(--primary-color);
+}
+
+h2 {
+  font-family: var(--heading-font);
+  color: var(--primary-color);
+  text-align: center;
+}
+
+header h1 {
+  color:var(--accent1-color);
+  font-size: 50px;
+}
+
+header h2 {
+  color: var(--accent1-color);
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 40px;
+}
+
+header, footer {
+  background-color: var(--primary-color);
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
+ 
+}
+
+footer {
+  color: var(--accent1-color);
+  font-family: var(--paragraph-font);
+}
+
+footer a:link, footer a:visited {
+  color: white;
+}
+nav button {
+  background-color: transparent;
+  border: none;
+  color: var(--accent1-color);
+}
+nav {
+  font-family: var(--heading-font);
+  background-color: var(--secondary-color);
+  line-height: 35px;
+  font-size: 20px;
+}
+nav ul {
+  list-style: none;
+  grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
+  background: var(--secondary-color);
+  padding: 0;
+  margin: 0;
+ 
+}
+nav ul li a {
+  display: block;
+  padding: .8%;
+  color: rgba(255,255,255,0.8);
+  border-top: 1px solid rgba(0,0,0,0.3);
+}
+nav ul li.active a{
+  background-color: var(--primary-color);
+}
+nav a:link, nav a:visited {
+  color: var(--background-color);
+  text-decoration: none;
+}
+nav a:hover {
+  color: var(--accent1-color);
+}
+
+.content {
+  font-family: var(--paragraph-font);
+  border: 1px dashed var(--primary-color);
+  padding: .6rem;
+  margin: 1.6rem;
+  background-color: var(--lightback-color);
+}
+
+br.responsive{
+  display: inline;
+}
+
+.moto {
+  font-style: italic;
+  letter-spacing: 1pt;
+  color: var(--accent1-color);
+  margin-left: 20px;
+  font-size: 1em;
+  font-family: var(--paragraph-font);
+}
+
+nav ul.hide {display: none;}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+html, body{
+  background-color: var(--primary-color);
+}
+
+
 form fieldset {
   margin: 2rem 0;
   border: 1px solid var(--secondary-color);
