--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -164,7 +164,7 @@ form legend {
 
 form label.top, form div {
   display: block;
-  padding-top: 15px;
+  padding-bottom: 15px;
   color: var(--secondary-color);
   font-size: 13px;
 }
