--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -165,7 +165,7 @@ form legend {
 
 form label.top, form div {
   display: block;
-  padding-bottom: 15px;
+  padding-top: 10px;
   color: var(--secondary-color);
   font-size: 14px;
 }
