--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -161,6 +161,7 @@ form legend {
   margin: 0 1rem;
   padding: 0 .5rem;
   font-size: 18px;
+  font-family: var(--heading-font);
 }
 
 form label.top, form div {
@@ -168,6 +169,7 @@ form label.top, form div {
   padding-top: 10px;
   color: var(--secondary-color);
   font-size: 14px;
+  font-family: var(--paragraph-font);
 }
 
 form label.top input, form label.top select {
