--- a/lesson9/css/large.css
+++ b/lesson9/css/large.css
@@ -36,4 +36,13 @@
     h2 {
         font-size: 20px;
     }
+
+    .cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: auto;
+        justify-items: center;
+        padding-top: 10px;
+      }  
+  
 }
