--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -42,12 +42,73 @@
         font-size: .8em;
     }
 
-    .cards {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: auto;
-      justify-items: center;
-      padding-top: 10px;
-    }  
+    .forecast {
+        margin: 10px auto;
+        position: relative;
+        border: 3px dashed var(--primary-color);
+        width: 600px;
+        height: 220px;
+        background-color: lightgrey;
+  }
+  
+  .forecast h3 {
+      text-align: center;
+    }
+  
+  td {
+      font-family: var(--paragraph-font);
+      color: var(--primary-color);
+      background-color: white;
+      }
+  
+      
+  th, td {
+  border: .5px solid var(--primary-color);
+  }
+  
+  table {
+  border-collapse: separate;
+  border-spacing: 41px 13px;
+  }
+
+  .articlepic{
+    width: 350px;
+    float: right;
+    padding-right: 15px
+  }
+
+  .contactmap{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    grid-auto-rows: 100px;
+  }
+
+  .social{
+    grid-column-start: 3;
+    grid-column-end:4;
+    grid-row-start:1;
+    grid-row-end: 2;
+    padding-top: 19px;
+    display: block;
+
+  }
+
+  .contactinfo{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-column-end: 2;
+    padding-left: 60px;
+    display: block;
+  }
+
+  .prestonmap {
+    grid-column-start: 1;
+    grid-column-end:2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    padding-left: 150px;
+    display: block;
+  }
 
 }
