--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -45,6 +45,7 @@ h1 {
 h2 {
     font-family: var(--heading-font);
     color: var(--primary-color);
+    text-align: center;
 }
 
 header h1 {
@@ -54,7 +55,6 @@ header h1 {
 
 header h2 {
     color: var(--accent1-color);
-    background-color: var(--secondary-color);
 }
 
 header {
@@ -148,14 +148,144 @@ html, body{
     background-color: var(--primary-color);
   }
 
-  .cards {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    justify-items: center;
+  .hero.ph{
+      margin: 10px auto;
+      background-color: #eee;
+      border: 1px solid #333;
+      width: auto;
+      height: 100%;
+  }
+
+  .herodiv {
+      margin: 10px auto;
+      position: relative;
+      border: 1px dashed var(--primary-color);
+
+      
+  }
+
+  .weathersummary {
+      position: absolute;
+      top: 2em;
+      left: 2em;
+      background: radial-gradient(#03045E, #03045E);
+      border: 1px solid var(--primary-color);
+      padding: .5rem;
+      box-shadow: 0 0 30px #777;
+      opacity: .8;
+  }
+
+  .banner-image{
+    height: auto;
+    width: 100%;
+  }
+
+  .herodiv h3{
+    font-family: var(--heading-font);
+    color: var(--accent1-color)
+}
+
+.herodiv p{
+    font-family: var(--paragraph-font);
+    color: var(--accent1-color);
+}
+
+.weather-image{
+    align-items: center;
+}
+
+h3 {
+    font-family: var(--heading-font);
+    font-size: 20px;
+    color: var(--primary-color)
+  }
+
+.article{
+    margin: 10px auto;
+    position: relative;
+    background-color: lightgrey;
+}
+
+.article h1{
+    text-align: left; 
+    padding-left: 20px;
     padding-top: 10px;
   }
+
+.article p{
+    padding-left: 10px;
+  }
+
+  .articlepic{
+    width: 100%;
+  }
+
+  .prestonmap{
+    float: left;
+    padding-left: 15px;
+    padding-top: 13px
+  }
+
+  .contactmap{
+      background-color: var(--secondary-color);
+      height: 300px
+  }
+
+  .contactinfo p{
+    color: white;
+  }
+
+  .contactinfo h3{
+    color: white;
+    padding-top:20px;
+  }
+
+  .social{
+    float: right;
+    padding-top:1px;
+    padding-right: 100px;
+  }
+
+  .social h3{
+    color: var(--accent1-color)
+  }
   
-      
+  .contactinfo{
+    float: right;
+    padding-right: 100px;
+  }
+
+  #big-banner {
+    color: white;
+    font-family: var(--paragraph-font);
+    display: none;
+    }
+
+    .contactmap{
+        display: grid;
+        grid-template-columns: 1fr; 
+        grid-auto-rows: 100px;
+      }
   
+      .social{
+        grid-column-start: 1;
+        grid-column-end:2;
+        grid-row-start:1;
+        grid-row-end: 2;
+    
+      }
+  
+      .contactinfo{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 4;
+       
+      }
+  
+      .prestonmap {
+        display: none;
+      }
+  
+    
   
