--- a/lesson9/css/large.css
+++ b/lesson9/css/large.css
@@ -36,4 +36,11 @@
     h2 {
         font-size: 20px;
     }
+
+    .towninfo {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        grid-gap: 10px;
+      }
 }
