--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -187,105 +187,20 @@ html, body{
 
 .herodiv p{
     font-family: var(--paragraph-font);
-    color: var(--accent1-color);
+    color: var(--primary-color);
 }
 
-.weather-image{
-    align-items: center;
+
+.towninfo {
+  display: grid;
+  grid-template-columns: 1fr;
+
 }
 
-h3 {
-    font-family: var(--heading-font);
-    font-size: 20px;
-    color: var(--primary-color)
-  }
-
-.article{
-    margin: 10px auto;
-    position: relative;
-    background-color: lightgrey;
+img {
+  width: 100%;
 }
 
-.article h1{
-    text-align: left; 
-    padding-left: 20px;
-    padding-top: 10px;
-  }
 
-.article p{
-    padding-left: 10px;
-  }
-
-  .articlepic{
-    width: 100%;
-  }
-
-  .prestonmap{
-    float: left;
-    padding-left: 15px;
-    padding-top: 13px
-  }
-
-  .contactmap{
-      background-color: var(--secondary-color);
-      height: 300px
-  }
-
-  .contactinfo p{
-    color: white;
-  }
-
-  .contactinfo h3{
-    color: white;
-    padding-top:20px;
-  }
-
-  .social{
-    float: right;
-    padding-top:1px;
-    padding-right: 100px;
-  }
-
-  .social h3{
-    color: var(--accent1-color)
-  }
-  
-  .contactinfo{
-    float: right;
-    padding-right: 100px;
-  }
-
-  #big-banner {
-    color: white;
-    font-family: var(--paragraph-font);
-    display: none;
-    }
-
-    .contactmap{
-        display: grid;
-        grid-template-columns: 1fr; 
-        grid-auto-rows: 100px;
-      }
-  
-      .social{
-        grid-column-start: 1;
-        grid-column-end:2;
-        grid-row-start:1;
-        grid-row-end: 2;
-    
-      }
-  
-      .contactinfo{
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 4;
-       
-      }
-  
-      .prestonmap {
-        display: none;
-      }
-  
     
   
