--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -205,6 +205,7 @@ html, body{
 section img {
   width: 100%;
   border: 3px solid white;
+  border-radius: 20px;
 }
 
 div section {
@@ -221,5 +222,13 @@ div section {
   text-align: center;
 }
 
-    
+section:nth-child(even) {
+  border: 6px solid var(--secondary-color);
+  border-radius: 20px;
+}
+
+section:nth-child(odd) {
+  border: 6px solid var(--secondary-color);
+  border-radius: 20px;
+}
   
