--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -222,12 +222,12 @@ div section {
   text-align: center;
 }
 
-section:nth-child(even) {
+.towninfo section:nth-child(even) {
   border: 6px solid var(--secondary-color);
   border-radius: 20px;
 }
 
-section:nth-child(odd) {
+.towninfo section:nth-child(odd) {
   border: 6px solid var(--secondary-color);
   border-radius: 20px;
 }
