--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -102,7 +102,10 @@
       border: 6px solid var(--secondary-color);
       border-radius: 20px;
     }
-
+    
+    .article img {
+      width: 50%;
+    }
   
   }
 
