--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -234,28 +234,29 @@ div section {
 
 .article h2 {
   color: var(--primary-color);
-  padding-top: 50px;
+  padding-top: 10px;
   font-size: 40px;
 }
 .article p {
   color: var(--primary-color);
+  padding-top: 10px;
 }
 
 .article img {
   display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 30px;
     width: 50%;
+    border-radius: 20px;
 }
 
 .article{
   margin: 10px auto;
+  margin-top: 50px;
   position: relative;
-  background-color: lightgrey;
   padding: 0px 15px 15px 15px;
   border-radius: 20px;
-  border: 2px solid var(--primary-color);
+  border: 6px solid var(--secondary-color);
 }
   
   
