--- a/lesson10/css/medium.css
+++ b/lesson10/css/medium.css
@@ -79,17 +79,16 @@
 
   .contactmap{
     display: grid;
-    grid-template-columns: repeat(4, 1fr); 
-    grid-auto-rows: 100px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
+    grid-template-rows: 1fr 1fr;
   }
 
   .social{
-    grid-column-start: 3;
-    grid-column-end:4;
+    grid-column-start: 2;
+    grid-column-end:8;
     grid-row-start:1;
     grid-row-end: 2;
-    padding-top: 19px;
-    display: block;
+    padding-left: 100px;
 
   }
 
@@ -98,7 +97,8 @@
     grid-column-end: 3;
     grid-row-start: 1;
     grid-column-end: 2;
-    padding-left: 60px;
+    padding-left: 120px;
+    padding-top: 115px;
     display: block;
   }
 
@@ -107,7 +107,7 @@
     grid-column-end:2;
     grid-row-start: 1;
     grid-row-end: 2;
-    padding-left: 150px;
+    
     display: block;
   }
 
