--- a/lesson10/css/large.css
+++ b/lesson10/css/large.css
@@ -39,16 +39,18 @@
 
     .contactmap{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: repeat(4, 1fr); 
+        grid-auto-rows: 100px;
       }
     
       .social{
-        grid-column-start: 2;
-        grid-column-end:8;
+        grid-column-start: 3;
+        grid-column-end:4;
         grid-row-start:1;
         grid-row-end: 2;
-        padding-left: 80px;
+        padding-top: 19px;
+        display: block;
+        width: 100%
     
       }
     
@@ -57,9 +59,9 @@
         grid-column-end: 3;
         grid-row-start: 1;
         grid-column-end: 2;
-        padding-left: 132px;
-        padding-top: 125px;
+        padding-left: 60px;
         display: block;
+        width: 100%
       }
     
       .prestonmap {
@@ -67,7 +69,7 @@
         grid-column-end:2;
         grid-row-start: 1;
         grid-row-end: 2;
-        
+        padding-left: 150px;
         display: block;
       }
 }
