--- a/large.css
+++ b/large.css
@@ -37,39 +37,13 @@
         font-size: 20px;
     }
 
-    .contactmap{
+   div.towninfo {
         display: grid;
-        grid-template-columns: repeat(4, 1fr); 
-        grid-auto-rows: 100px;
+        grid-template-columns: 1fr 1fr 1fr;
       }
-    
-      .social{
-        grid-column-start: 3;
-        grid-column-end:4;
-        grid-row-start:1;
-        grid-row-end: 2;
-        padding-top: 19px;
-        display: block;
-        width: 100%
-    
-      }
-    
-      .contactinfo{
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-column-end: 2;
-        padding-left: 60px;
-        display: block;
-        width: 100%
-      }
-    
-      .prestonmap {
-        grid-column-start: 1;
-        grid-column-end:2;
-        grid-row-start: 1;
-        grid-row-end: 2;
-        padding-left: 150px;
-        display: block;
-      }
+
+div.towninfo section {
+    display: block;
+    height: auto;
+}
 }
