--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -18,6 +18,14 @@ html{
     background-color: var(--background-color);
 }
 
+#big-banner {
+  padding: 25px;
+  text-align: center;
+  font-size: 25px;
+  background-color: var(--secondary-color);
+}
+
+
 body {
     margin: 0 auto;
     background-color: var(--accent1-color);
@@ -39,16 +47,13 @@ p {
 
 h1 {
     font-family: var(--heading-font);
-    color: white;
-    background-color: var(--primary-color);
-    padding: 10px;
+    color: var(--primary-color);
 }
 
 h2 {
     font-family: var(--heading-font);
-    color: white;
+    color: var(--primary-color);
     text-align: center;
-    text-decoration: underline;
 }
 
 header h1 {
@@ -160,28 +165,14 @@ html, body{
   }
 
   .herodiv {
-      margin: 10px auto;
-      position: relative;
-      
-
-      
-  }
-
-  .weathersummary {
-      position: absolute;
-      top: 2em;
-      left: 2em;
-      background: radial-gradient(#03045E, #03045E);
-      border: 1px solid var(--primary-color);
-      padding: .5rem;
-      box-shadow: 0 0 30px #777;
-      opacity: .8;
-  }
+    margin: 10px auto;
+    position: relative;
+    width: 100%;
+}
 
   .banner-image{
     height: auto;
     width: 100%;
-    padding-bottom: 25px;
   }
 
   .herodiv h3{
@@ -191,72 +182,185 @@ html, body{
 
 .herodiv p{
     font-family: var(--paragraph-font);
-    color: white;
+    color: var(--accent1-color);
 }
 
-
-.towninfo {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 15px;
-
+.weather-image{
+    align-items: center;
 }
 
-section img {
-  width: 100%;
-  border: 3px solid white;
-  border-radius: 20px;
-}
+h3 {
+    font-family: var(--heading-font);
+    font-size: 20px;
+    color: var(--primary-color)
+  }
 
-div section {
-  text-align: center;
-  border: 1px solid #03045E;
-  padding-top: 15px;
-  background-color: var(--primary-color);
-  padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.home{
-  text-align: center;
-}
-
-.towninfo section:nth-child(even) {
-  border: 6px solid var(--secondary-color);
-  border-radius: 20px;
-}
-
-.towninfo section:nth-child(odd) {
-  border: 6px solid var(--secondary-color);
-  border-radius: 20px;
-}
-
-.article h2 {
-  color: var(--primary-color);
-  padding-top: 10px;
-  font-size: 40px;
-}
-.article p {
-  color: var(--primary-color);
-  padding-top: 10px;
-}
-
-.article img {
-  display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    border-radius: 20px;
-}
+  .weathersummary {
+    position: relative;
+    background: radial-gradient(#03045E, #03045E);
+    padding: .5rem;
+    box-shadow: 0 0 30px #777;
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+  }
 
 .article{
-  margin: 10px auto;
-  margin-top: 50px;
-  position: relative;
-  padding: 0px 15px 15px 15px;
-  border-radius: 20px;
-  border: 6px solid var(--secondary-color);
+    margin-top: 80px;
+    position: relative;
+    background-color: lightgrey;
+    padding: 10px;
 }
+
+.article h3{
+  text-align: center; 
+}
+
+.article p{
+    padding-left: 10px;
+  }
+
+  .articlepic{
+    width: 100%;
+    padding: 15px;
+  }
+
+  .prestonmap{
+    float: left;
+    padding-left: 15px;
+    padding-top: 13px
+  }
+
+  .contactmap{
+      background-color: var(--secondary-color);
+      height: 300px
+  }
+
+  .contactinfo p{
+    color: white;
+  }
+
+  .contactinfo h3{
+    color: white;
+    padding-top:20px;
+  }
+
+  .social{
+    float: right;
+  }
+
+  .social h3{
+    color: var(--accent1-color)
+  }
   
+  .contactinfo{
+    float: right;
+    padding-top: 20px;
+  }
+
+  #big-banner {
+    color: white;
+    font-family: var(--paragraph-font);
+    display: none;
+    }
+
+    .contactmap{
+        display: grid;
+        grid-template-columns: 1fr; 
+        grid-auto-rows: 100px;
+      }
+  
+      .social{
+        grid-column-start: 1;
+        grid-column-end:2;
+        grid-row-start:1;
+        grid-row-end: 2;
+    
+      }
+  
+      .contactinfo{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 4;
+       
+      }
+  
+      .prestonmap {
+        display: none;
+      }
+
+      #five-day-forecast {
+        display: none;
+      }
+
+      .towninfo {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 15px;
+      
+      }
+      
+      section img {
+        width: 100%;
+        border: 3px solid white;
+        border-radius: 20px;
+      }
+      
+      div section {
+        text-align: center;
+        border: 1px solid #03045E;
+        padding-top: 15px;
+        background-color: var(--primary-color);
+        padding-bottom: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+      
+      .home{
+        text-align: center;
+      }
+      
+      .towninfo section:nth-child(even) {
+        border: 6px solid var(--secondary-color);
+        border-radius: 20px;
+      }
+      
+      .towninfo section:nth-child(odd) {
+        border: 6px solid var(--secondary-color);
+        border-radius: 20px;
+      }
+      
+      .article h2 {
+        color: var(--primary-color);
+        padding-top: 10px;
+        font-size: 40px;
+      }
+      .article p {
+        color: var(--primary-color);
+        padding-top: 10px;
+      }
+      
+      .article img {
+        display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 50%;
+          border-radius: 20px;
+      }
+      
+      .article{
+        margin: 10px auto;
+        margin-top: 50px;
+        position: relative;
+        padding: 0px 15px 15px 15px;
+        border-radius: 20px;
+        border: 6px solid var(--secondary-color);
+      }
+        
+        
+    
+      
+  
+    
   
