--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -225,6 +225,7 @@ h3 {
     padding: 15px;
   }
 
+
   .prestonmap{
     float: left;
     padding-left: 15px;
@@ -293,6 +294,32 @@ h3 {
       #five-day-forecast {
         display: none;
       }
+      
+      div section {
+        text-align: center;
+        border: 1px solid #03045E;
+        padding-top: 15px;
+        background-color: var(--primary-color);
+        padding-bottom: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+
+      .eventinfo section {
+        width: 100%;
+  
+      }
+  
+      .eventinfo{
+        padding-left: 80px;
+        padding-right: 80px;
+      }
+        
+      .eventinfo p{
+        color: white;
+      }
+
+      
     
       
   
