--- a/lesson12/css/target.css
+++ b/lesson12/css/target.css
@@ -77,6 +77,7 @@ nav {
     color: var(--background-color);
     font-weight: bold;
     font-size: 20px;
+    width: 100%;
 }
 nav ul {
     list-style: none;
