--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -3,11 +3,15 @@
     --primary-color: #1d3557;
     --secondary-color: #FFFFFF;
     --background-color: #99C1FF;
-    --accent1-color: #615E5D;
+    --accent1-color: #007236;
 
     --paragraph-font: 'Josefin Sans', sans-serif;
     --heading-font: 'Krona One', sans-serif;
 }
+
+html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 html{
     background-color: var(--primary-color);
@@ -55,6 +59,7 @@ header h1 {
 
 header h2 {
     color: var(--secondary-color);
+    font-size: 15px;
 }
 
 header, footer {
@@ -94,3 +99,42 @@ nav a:link, nav a:visited {
 nav a:hover {
     color: var(--secondary-color);
 }
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+nav ul.hide {display: none;}
+
+nav button {
+    background-color: white;
+    border: none;
+    color: var(--accent1-color);
+  }
+
+  nav ul li a {
+    display: block;
+    padding: .8%;
+    color: rgba(255,255,255,0.8);
+    border-top: 1px solid rgba(0,0,0,0.3);
+  }
+  nav ul li.active a{
+    background-color: var(--primary-color);
+  }
+
+img.scoots-logo {
+    border-style: none;
+    width: 30%;
+    
+}
+
+img.banner-image {
+    width: 100%;
+}
+
+
+
+
+
