--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -19,7 +19,6 @@ html{
 
 body {
     margin: 0 auto;
-    background-color: var(--background-color);
     max-width: 80%;
     border-radius: 10px;
 }
@@ -55,6 +54,7 @@ h2, h3 {
 header h1 {
     color:var(--secondary-color);
     font-size: 30px;
+    padding-top: 15px;
 }
 
 header h2 {
@@ -80,7 +80,6 @@ footer a:link, footer a:visited {
 nav {
     font-family: var(--heading-font);
     color: var(--background-color);
-    font-weight: bold;
     font-size: 20px;
     width: 100%;
 }
@@ -112,28 +111,51 @@ nav button {
     background-color: white;
     border: none;
     color: var(--accent1-color);
+    align-items: center;
   }
 
   nav ul li a {
     display: block;
-    padding: .8%;
+    padding: 1%;
     color: rgba(255,255,255,0.8);
     border-top: 1px solid rgba(0,0,0,0.3);
+    font-size: 25px;
   }
   nav ul li.active a{
     background-color: var(--primary-color);
+    text-decoration: underline;
   }
 
 img.scoots-logo {
-    border-style: none;
-    width: 30%;
-    
+    width: 3in;
+    border-radius: 15px;
+    border: 6px solid var(--background-color);
 }
 
 img.banner-image {
     width: 100%;
+
 }
 
+button {
+    background-color: var(--primary-color);
+    font-family: var(--paragraph-font);
+    color: var(--secondary-color);
+    padding: 10px;
+    text-decoration: underline;
+    font-size: 16px;
+    border-radius: 10px;
+  }
+
+button:hover {
+    background-color: var(--accent1-color);
+}
+
+.reservebutton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
