--- a/scoots/css/medium.css
+++ b/scoots/css/medium.css
@@ -30,4 +30,46 @@
     header img {
         width: 100%;
     }
+
+    .forecast {
+        margin: 1px auto;
+        position: relative;
+        width: 670px;
+        height: 220px;
+        background-color: lightgray;
+  }
+  
+  .weatherhead h3{
+    text-align: center;
+    padding-top: 10px;
+    text-decoration: underline;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: lightgrey;
+  }
+  
+  #three-day-forecast{
+    font-family: var(--paragraph-font);
+    color: var(--primary-color);
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding-right: 40px;
+    padding-left: 40px;
+      }
+  
+   #three-day-forecast p {
+     color: var(--primary-color);
+   }
+  
+   #three-day-forecast li {
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
+    background-color: white;
+    margin: 1rem;
+    padding: 20px;
+    padding-bottom: 10px;
+    }
+    
 }
