--- a/scoots/css/medium.css
+++ b/scoots/css/medium.css
@@ -35,11 +35,12 @@
         margin: 1px auto;
         position: relative;
         width: 670px;
-        height: 220px;
+        height: 320px;
         background-color: lightgray;
+        padding-top: 10px;
   }
   
-  .weatherhead h3{
+  .forecast h3{
     text-align: center;
     padding-top: 10px;
     text-decoration: underline;
