--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -183,13 +183,46 @@ button:hover {
     text-decoration: underline;
 }
 
+.rentaltype {
+    align-content: center;
+    text-align: center;
+}
+
+.rentaltype h2 {
+    color: var(--primary-color);
+    text-decoration: underline;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.rentaltype h3 {
+    color: var(--accent1-color);
+}
+
+.rentaltype p {
+    size: 20px;
+}
+
 #three-day-forecast {
     display: none;
   }
 
-.social {
-    display: flex;
+.contact {
     align-content: center;
+    text-align: center;
+}
+
+.contact p {
+    size: 15px;
+}
+
+.social {
+    align-content: center;
+    text-align: center;
+}
+
+.social h3 {
+    padding-right: 20px;
 }
 
 
