--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -99,6 +99,10 @@ nav a:hover {
     color: var(--secondary-color);
 }
 
+nav ul li.active a{
+    background-color: var(--accent1-color);
+}
+
 .clearfix:after {
     content: "";
     display: table;
