--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -99,10 +99,6 @@ nav a:hover {
     color: var(--secondary-color);
 }
 
-nav ul li.active a{
-    background-color: var(--accent1-color);
-}
-
 .clearfix:after {
     content: "";
     display: table;
@@ -126,7 +122,7 @@ nav button {
     font-size: 25px;
   }
   nav ul li.active a{
-    background-color: var(--primary-color);
+    background-color: var(--accent1-color);
     text-decoration: underline;
   }
 
@@ -253,5 +249,75 @@ div.table {
     width: 100%;
 }
 
+/*RESERVATION CSS*/
+form fieldset {
+    margin: 6rem;
+    border: 3px solid var(--primary-color);
+    border-radius: 10px;
+    padding: .5rem 2%;
+    background-color: lightgrey;
+  }
+  
+  form legend {
+    color: var(--secondary-color);
+    margin: 0 1rem;
+    padding: 1rem;
+    font-size: 18px;
+    font-family: var(--heading-font);
+    background-color: var(--primary-color);
+    border: 3px solid var(--accent1-color);
+  }
+  
+  form label.top, form div {
+    display: block;
+    padding-top: 10px;
+    color: var(--primary-color);
+    font-size: 14px;
+    font-family: var(--paragraph-font);
+  }
+  
+  form label.top input, form label.top select {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px var(--primary-color);
+    border-radius: 4px;
+    padding: .75rem;
+    color: var(--secondary-color);
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0,0,0,0.1);
+  
+  }
+  
+  form label.sbs {
+     display: block;
+     padding: .75rem 0;
+     color: var(--primary-color);
+     font-family: var(--paragraph-font);
+  }
+  
+  form input.submitBtn {
+     border: none;
+     background-color: var(--primary-color);
+     color: var(--secondary-color);
+     border-radius: 1rem;
+     padding: .75rem 1.5rem; 
+     margin: 0 0 2rem 2%;
+     width: 96%;
+     max-width: 20rem;
+     font-family: var(--paragraph-font);
+  }
+  
+  form label.top input:required {
+    border-left: red solid 6px;
+  }
+  
+  form label.top input:required:valid {
+     border-left: green solid 6px;
+  }
 
+  .reservehead {
+      text-align: center;
+  }
 
