--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -503,6 +503,7 @@ form fieldset {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    align-items: center;
 }
 
 .info {
